# brainfm-presence

./: .gitignore  Cargo.toml  LICENSE  README.md
.agent/workflows/: build-dmg.md
.github/workflows/: ci.yml  release.yml
assets/: icon.icns
src/: api_cache_reader.rs  api_client.rs  cache_reader.rs  leveldb_reader.rs  lib.rs  main.rs  media_remote_reader.rs  tray.rs  util.rs
src/platform/: macos.rs  mod.rs  windows.rs
