[package]
name = "brainfm-presence"
version = "1.2.5"
edition = "2021"
rust-version = "1.80"
authors = ["Jakub Sládek (xd.js)"]
description = "Discord Rich Presence for Brain.fm - displays your current focus mode and track"
license = "MIT"
repository = "https://github.com/yourusername/brainfm-discord"
readme = "README.md"
keywords = ["discord", "brainfm", "rich-presence", "focus", "music"]
categories = ["multimedia"]

[dependencies]
# System tray
tray-icon = "0.21"
winit = "0.30"
image = { version = "0.25", default-features = false, features = ["png"] }

# LevelDB for reading local storage
rusty-leveldb = "4.0"

# JSON parsing
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Error handling
anyhow = "1.0"

# Directories for finding app data
dirs = "6.0"

# Regex for parsing
regex = "1.0"

# Gzip decompression for cached API responses
flate2 = "1.0"

# HTTP client for Direct API calls (blocking, lightweight)
ureq = "3"

# Base64 decoding for JWT token inspection
base64 = "0.22"

# Discord Rich Presence (pinned to 1.0 - version 1.1.0 has a bug)
discord-rich-presence = "1.0"

# Logging
log = "0.4"
env_logger = "0.11"

# macOS frameworks bindings (macOS only)
[target.'cfg(target_os = "macos")'.dependencies]
core-foundation = "0.10"
objc2 = "0.6"
objc2-app-kit = { version = "0.3", features = ["NSApplication", "NSRunningApplication"] }
mediaremote-rs = "0.1"

# Windows dependencies (Windows only)
[target.'cfg(target_os = "windows")'.dependencies]
winapi = { version = "0.3", features = ["winuser", "processthreadsapi", "tlhelp32"] }

# Main binary for Discord presence (this is what gets bundled)
[[bin]]
name = "brainfm-presence"
path = "src/bin/discord_rpc.rs"

# Debug binary (not bundled)
[[bin]]
name = "brainfm-debug"
path = "src/main.rs"

# MediaRemote test binary (not bundled)
[[bin]]
name = "brainfm-mediaremote-test"
path = "src/bin/test_mediaremote.rs"

# Cargo bundle configuration for macOS .app
[package.metadata.bundle]
name = "Brain.fm Presence"
identifier = "com.brainfm.presence"
icon = ["assets/icon.icns"]
short_description = "Discord Rich Presence for Brain.fm"
long_description = """
Brain.fm Presence displays your current Brain.fm session in Discord Rich Presence.
It shows your focus mode, current track, neural effect level, and session duration.
Runs quietly in your menu bar with no window required.
"""
category = "Music"
osx_minimum_system_version = "10.14"
# Hide from Dock — tray-only agent app
plist_entries = { "LSUIElement" = true }

# Configuration for the main binary
[package.metadata.bundle.bin.brainfm-presence]
name = "Brain.fm Presence"
identifier = "com.brainfm.presence"
icon = ["assets/icon.icns"]

[dev-dependencies]
proptest = "1.0"

# Build optimizations for release
[profile.release]
lto = true
codegen-units = 1
strip = true
opt-level = "z"

[lints.clippy]
pedantic = { level = "warn", priority = -1 }
module_name_repetitions = "allow"
missing_errors_doc = "allow"
missing_panics_doc = "allow"
wildcard_imports = "allow"
